fixed the submit button style on mobile

--- a/css/main.en.css
+++ b/css/main.en.css
@@ -1487,6 +1487,10 @@ div.steps div.step.selected {
         width: 100%;
     }
 
+    div.action form div.label input[type=submit] {
+        width: 100%;
+    }
+
     div.steps {
         display: none;
     }
